@@ -11,6 +11,12 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-03
+2012-05-10 Mikhail S. Dubrovin
+- in CSPadCalibPars.cpp 
+  Add warning message and abort() if the calibration file is not found.
+  DEFAULT CONSTANTS ARE NOT PROVIDED YET !!!!!!!!!!!!!!!!! IN MY TO DO LIST....
+	
 Tag: V00-01-02
 2012-05-01 Andy Salnikov
 - upgrading to boost 1.49.0, some return types have changed in 
